PIP-291 Java 17 upgrade and warnings fixing