@@ -16,7 +16,7 @@
     <description>SNOMED Release Validation Framework</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <packageName>rvf-api</packageName>
         <skip.integration.tests>true</skip.integration.tests>
@@ -38,7 +38,7 @@
         <javax.persistence-api.version>2.2</javax.persistence-api.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <jaxen.version>1.1.6</jaxen.version>
-        <jdom.version>2.0.2</jdom.version>
+        <jdom.version>2.0.6.1</jdom.version>
         <mrcm-validator.version>1.12.0-SNAPSHOT</mrcm-validator.version>
         <mybatis.version>3.5.6</mybatis.version>
         <mysql-connector-java.version>8.0.28</mysql-connector-java.version>
@@ -150,7 +150,7 @@
             </dependency>
             <dependency>
                 <groupId>org.jdom</groupId>
-                <artifactId>jdom</artifactId>
+                <artifactId>jdom2</artifactId>
                 <version>${jdom.version}</version>
             </dependency>
             <dependency>
@@ -402,7 +402,7 @@
         </dependency>
         <dependency>
             <groupId>org.jdom</groupId>
-            <artifactId>jdom</artifactId>
+            <artifactId>jdom2</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -497,6 +497,31 @@
 
     <build>
         <plugins>
+            <!--
+                Add the Add-Opens to the manifest file to allow snomed-owl-toolkit to work with java 17
+                Remove this when the owl-api is updated to use version 5
+            -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <executions>
+                    <execution>
+                        <id>default-jar</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <archive>
+                                <manifestEntries>
+                                    <Add-Opens>java.base/java.lang</Add-Opens>
+                                </manifestEntries>
+                            </archive>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
